--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
   Testing:
     runs-on: [self-hosted, kernel-prd-u2404-x64-large-od-ephem]
     steps:
-      - name: docker test
+      - name: docker tests
         run: |
          docker --version
          sleep 5m
