Enable email checker on qcom-next-staging branch
Need email checker on qcom-next-staging branch only

Co-authored-by: Nasser Grainawi <nasser.grainawi@oss.qualcomm.com>
Signed-off-by: VISHAL KUMAR <viskuma@qti.qualcomm.com>

--- a/.github/workflows/email_checker.yml
+++ b/.github/workflows/email_checker.yml
@@ -1,6 +1,8 @@
 name: PR email addresses checker
 
-on: pull_request
+on:
+  pull_request:
+    branches: [ qcom-next-staging ]
 
 jobs:
   pr-check-emails:
